--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
+    <string name="action_share_text">Hey! Come read %1$s\'s article on XYZ Reader!</string>
 
     <string name="up">Up</string>
 
